--- a/AutoFillingObjectsWithData/resources/afowd/boundary.properties
+++ b/AutoFillingObjectsWithData/resources/afowd/boundary.properties
@@ -1,21 +1,71 @@
-#Class Worker  minRange, maxRange, allow nulls, precision
-Worker.age=0,120
-Worker.yearsOfExpirenceTotal=0, 80, true
-Worker.solary=1500,20000,true
-Worker.solary1=1500,20000,true
-Worker.hourPrice=10,100,true,2
-Worker.hourPrice1=10,100,true
-Worker.streetNumber= 0, 20
-Worker.streetNumber1= 0, 2000
-Worker.streetNumber2= 50, 100
-Worker.height= 0, 200
-Worker.height1= 219, 220
-Worker.workingHours= 500, 600, false
-Worker.workingHours1= 500, 6000, false, 5
-Worker.birthDate=01.01.1910,31.12.2015
-Worker.middleName=65,91
-Worker.middleName1=65,91
+#Class Worker
+Worker.age.min=0
+Worker.age.max=100
+
+Worker.yearsOfExpirenceTotal.min=0
+Worker.yearsOfExpirenceTotal.max=80
+Worker.yearsOfExpirenceTotal.allow_nulls=true
+
+Worker.solary.min=1500
+Worker.solary.max=20000
+Worker.solary.allow_nulls=true
+
+Worker.solary1.min=1500
+Worker.solary1.max=20000
+Worker.solary1.allow_nulls=true
+
+Worker.hourPrice.min=10
+Worker.hourPrice.max=100
+Worker.hourPrice.allow_nulls=true
+Worker.hourPrice.precision=2
+
+Worker.hourPrice1.min=10
+Worker.hourPrice1.max=100
+Worker.hourPrice1.allow_nulls=true
+
+Worker.streetNumber.min=0
+Worker.streetNumber.max=20
+
+Worker.streetNumber1.min= 0
+Worker.streetNumber1.max=2000
+
+Worker.streetNumber2.min=50
+Worker.streetNumber2.max=100
+
+Worker.height.min=0
+Worker.height.max=200
+
+Worker.height1.min=219
+Worker.height1.max=220
+
+Worker.workingHours.min=500
+Worker.workingHours.max=600
+Worker.workingHours.allow_nulls=false
+
+Worker.workingHours1.min=500
+Worker.workingHours1.max=6000
+Worker.workingHours1.allow_nulls=false
+Worker.workingHours1.precision=5
+
+Worker.birthDate.min=01/01/1910 00:00:00
+Worker.birthDate.max=31/12/2015 00:00:00
+
+Worker.middleName.min=65
+Worker.middleName.max=91
+
+Worker.middleName1.min=65
+Worker.middleName1.max=91
+
+Worker.gender.min=0
+Worker.gender.max=1
+Worker.gender.enum=MALE, FEMALE
+
 
 #Class Adress
-Adress.streetNumber=0,200
-Adress.streetNumber2=0,128
+Adress.streetNumber.min=0
+Adress.streetNumber.max=200
+Adress.streetNumber2.min=0
+Adress.streetNumber2.max=128
+
+
+
