--- a/AutoFillingObjectsWithData/resources/afowd/log4j.properties
+++ b/AutoFillingObjectsWithData/resources/afowd/log4j.properties
@@ -1,5 +1,5 @@
 #  Logging level
-afowd.log=logs/
+afowd.log=AutoFillingObjectsWithData/logs/
 log4j.rootLogger=DEBUG, stdout, CONSOLE, file 
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,7 +8,7 @@ log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x \u2013 %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x \u2016 %m%n
 
 #- size rotation with log cleanup.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -18,7 +18,7 @@ log4j.appender.file.MaxBackupIndex=9
 #- File to log to and log format
 log4j.appender.file.File=${afowd.log}/afowd.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%-5p - %d{yyyy-MM-dd HH:mm:ss.SSS}; %C; %m\n
+log4j.appender.file.layout.ConversionPattern=%-5p - %d{yyyy/MM/dd HH:mm:ss.SSS}; %C; %m\n
 
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.apache.hadoop=WARN
