Refactoring, syntax errors.

--- a/RandomDataGenerator/resources/rdg/boundary.properties
+++ b/RandomDataGenerator/resources/rdg/boundary.properties
@@ -1,18 +1,15 @@
 #Class Worker
 Worker.age.min=0
 Worker.age.max=100
-
-Worker.yearsOfExpirenceTotal.min=0
-Worker.yearsOfExpirenceTotal.max=80
-Worker.yearsOfExpirenceTotal.allow_nulls=true
-
-Worker.solary.min=1500
-Worker.solary.max=20000
-Worker.solary.allow_nulls=true
-
-Worker.solary1.min=1500
-Worker.solary1.max=20000
-Worker.solary1.allow_nulls=true
+Worker.yearsOfExperienceTotal.min=0
+Worker.yearsOfExperienceTotal.max=80
+Worker.yearsOfExperienceTotal.allow_nulls=true
+Worker.salary.min=1500
+Worker.salary.max=20000
+Worker.salary.allow_nulls=true
+Worker.salary1.min=1500
+Worker.salary1.max=20000
+Worker.salary1.allow_nulls=true
 
 Worker.hourPrice.min=10
 Worker.hourPrice.max=100
@@ -59,13 +56,11 @@ Worker.middleName1.max=91
 Worker.gender.min=0
 Worker.gender.max=1
 Worker.gender.enum=MALE, FEMALE
-
-
-#Class Adress
-Adress.streetNumber.min=0
-Adress.streetNumber.max=200
-Adress.streetNumber2.min=0
-Adress.streetNumber2.max=128
+#Class Address
+Address.streetNumber.min=0
+Address.streetNumber.max=200
+Address.streetNumber2.min=0
+Address.streetNumber2.max=128
 
 
 
