--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 /RandomDataGenerator/target/
 /SpringHibernate/target/
 /RandomDataGenerator/.idea/
+/RandomDataGenerator/.settings
 /SpringHibernate/SpringHibernate.iml
+/SpringHibernate/.settings
+.idea
+.settings
