Weekend Maze Simulator

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 /RandomDataGenerator/.settings
 /SpringHibernate/SpringHibernate.iml
 /SpringHibernate/.settings
+/WeekendMazeSimulator/.idea/
+/WeekendMazeSimulator/WeekendMazeSimulator.iml
 .idea
 .settings
